--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Massaillon's professional portfolio
+description: This is a website that showcase all I can do based on my skills,projects done,programming language mastering
